Closed Bug 693282 Opened 14 years ago Closed 14 years ago

BasicShadowableThebesLayer leaking backBuffers

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla10

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file)

Found that in 690469 I dropped BasicManager()->DestroyedThebesBuffer(BasicManager()->Hold(this), mBackBuffer); which was collecting dying buffers and deallocating it. Looks like that part need to be moved back, otherwise we are leaking thebes buffers
Assignee: nobody → romaxa
Status: NEW → ASSIGNED
Attachment #565907 - Flags: review?(jones.chris.g)
This fix looks OK, but why wasn't the leak caught by any of our tests? Were buffers actually leaking during reftest-ipc but not being caught, or do none of our tests exercise the path that was leading to a leak? We need to make sure this doesn't happen again.
yep, that is interesting question... that leak is very easily visible in about:memory reporter.... but reason is that we don't run IPC-reftests on debug linux builds... only on opt builds... that is why we don't run leak enabled test-run...
Attachment #565907 - Flags: review?(jones.chris.g) → review+
This patch need to be landed in couple with patch from bug 690469 in order 1-st bug 690469, second 693282
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: