Bug 693282 - BasicShadowableThebesLayer leaking backBuffers. r=cjones